creusot/tests/should_fail/ghost/capture_non_copy_data.stderr
error: not a ghost variable: v
 --> capture_non_copy_data.rs:5:12
  |
5 |     ghost!(v);
  |            ^
  |
note: variable defined here
 --> capture_non_copy_data.rs:4:30
  |
4 | pub fn capture_non_copy_data(v: Vec<i32>) {
  |                              ^

error: aborting due to 1 previous error

